Fixed in version 4.1.1:

  * Check of lspinorb flag consistency between left/right lead and
    scattering region in pwcond.x was not working properly; wrong
    print-out of E-Ef when Nchannels=0 also fixed.

  * Check on convergence of variable-cell damped dynamics was not
    working as expected in the presence of constraints

  * Velocity rescaling in CP was not working, and it was performed
    also if not required when ion velocities were set to 'random'

  * ESPRESSO_TMPDIR is caught by gipaw.x as well
 
  * Phonon calculation could not be performed with only local PPs

  * Small error in the definition of the saw-tooth potential for slab
    calculations with E-field: the "physical" dimensions of the R-space
    grid are nr1,nr2,nr3 NOT nrx1,nrx2,nrx3

  * Misc compilation problem for: gfortran v.4.1 (casino2upf),
    pathscale 3.2 (mp_base),  xlf 12.1 (buggy compilation of iotk)

  * Possible memory leak in PW/update_pot.f90

  * Spin-polarized calculations in CPV had a bug since v.4.1  when using
    parallel distributed diagonalization ("ortho" group)

  * FFT glitches: Nec SX routines were not properly called,
    OpenMP was not compatible with all FFTs

  * augmentation charges in real space (tqr=.true.) and k-point
    parallelization (pools) was not working due to bogus check

  * fhi2upf.x : fixed segmentation fault in some cases with ifort

  * OLYP XC functional was incorrectly flagged as Meta-GGA 
    (courtesy of Latevi Max Lawson Daku)

  * Minor corrections and extensions to the documentation

New in version 4.1:

  * New exchange-correlation functionals: 
    PBEsol and WC (courtesy of Willam Parker, Ohio State U.)
    LDA with finite-size corrections (Kwee, Zhang, Krakauer,
    courtesy of Ester Sola and Dario Alfe)

  * Dispersion calculation with DFT-D (Grimme)

  * mixed openMP-MPI parallelization (very experimental)
 
Fixed in version 4.1:

  * the sum of all nuclear forces is no longer forced to zero in 